<resources>
    <string name="app_name">Notely</string>
    <string name="no_data">No Data</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="search">search</string>
    <string name="sort_by">sort_by</string>
    <string name="priority_high">priority_high</string>
    <string name="priority_low">priority_low</string>
    <string name="delete_all">delete All</string>
    <string name="add">add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="todo">ToDo</string>
    <string name="archive">archive</string>
    <string name="notification">notification</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

    <string name="sign_up_to_keep">Sign up to keep</string>
    <string name="notes">Notes</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_sign_in_now">Have an account? Sign in now.</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up_now">Do not have an account? Sign up now.</string>
    <string name="image">image</string>
    <string name="sign_in_to_keep">Sign in to keep</string>

    <string name="note_notification_channel_id" translatable="false">note_channel</string>
    <string name="notification_title">Word Reminder</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note SubTitle</string>
    <string name="type_note_here">Type note here…</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="action">action</string>
    <string name="url">url</string>
    <string name="are_you_sure_you_want_to_remove_everything">Are you sure you want to remove everything?</string>

</resources>