<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.update.UpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCurrent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image"
            android:visibility="visible"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/etCurrentTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="24dp"
            android:paddingEnd="24dp" />

        <Spinner
            android:id="@+id/spCurrentPriorities"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:entries="@array/priorities"
            android:paddingStart="16dp"
            android:paddingEnd="20dp" />

        <EditText
            android:id="@+id/etCurrentDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp" />
    </LinearLayout>
</ScrollView>